[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/Theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/InGameMenu.gd" type="Script" id=2]
[ext_resource path="res://fonts/ltfunk_24_shadow.tres" type="DynamicFont" id=3]

[node name="InGameMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -250.0
margin_right = 256.0
margin_bottom = 250.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.0898438
anchor_top = 0.14
anchor_right = 0.910156
anchor_bottom = 0.86
rect_min_size = Vector2( 420, 360 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 16.0
margin_top = 52.0
margin_right = 404.0
margin_bottom = 308.0
size_flags_vertical = 4
custom_constants/separation = 21

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 388.0
margin_bottom = 30.0
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "PAUSE"
align = 1

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 388.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 16 )
size_flags_vertical = 5

[node name="Resume" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_left = 65.0
margin_top = 88.0
margin_right = 323.0
margin_bottom = 130.0
rect_min_size = Vector2( 258, 42 )
size_flags_horizontal = 4
size_flags_vertical = 5
text = "Resume the game"

[node name="Settings" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_left = 65.0
margin_top = 151.0
margin_right = 323.0
margin_bottom = 193.0
rect_min_size = Vector2( 258, 42 )
size_flags_horizontal = 4
size_flags_vertical = 5
text = "Settings"

[node name="ReturnMainMenu" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_left = 65.0
margin_top = 214.0
margin_right = 323.0
margin_bottom = 256.0
rect_min_size = Vector2( 258, 42 )
size_flags_horizontal = 4
size_flags_vertical = 5
text = "Return to main menu"

[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/Resume" to="." method="_on_button_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/Settings" to="." method="_on_button_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/ReturnMainMenu" to="." method="_on_button_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ReturnMainMenu" to="." method="_on_ReturnMainMenu_pressed"]
